# reflex-langgraph-challenge

./: .gitignore  README.md  challenge-01.ipynb  challenge-02.ipynb  challenge-03.ipynb  challenge-04.py  challenge-05.py  challenge-06.py  challenge-07.py  life-coach-agent.db  main.py  pyproject.toml  requirements.txt
education_agents/: DESIGN.md  agent.py  main.ipynb
education_agents_plus/: README.md  agent.py  tools.py
geo_master_agents/: README.md  agent.py  cloudflare.sql  main.py  tools.py  utils.py
geo_master_agents_plus/: README.md  agent.py  main.py  tools.py  utils.py
restaurant_agents/: factory.py  instructions.py  models.py  sub_menu_agent.py  sub_order_agent.py  sub_reservation_agent.py  triage_agent.py
storybook_agents/: agent.py  prompts.py  tools.py
storybook_agents_workflow/: agent.py  models.py  tools.py
