[project]
name = "reflex-langgraph-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "openai>=2.23.0",
    "graphviz>=0.21",
    "openai-agents[viz]>=0.10.3",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
