[project]
name = "reflex-langgraph-challenge"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "graphviz>=0.21",
    "openai>=2.23.0",
    "openai-agents[viz]>=0.10.3",
    "litellm>=1.82.6",
    "google-adk>=1.27.2",
    "google-genai>=1.68.0",
    "langgraph>=1.1.3",
    "langchain-openai>=1.1.12",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
